# FeedbackBot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FeedbackBot.cabal  LICENSE  README.md  config.yaml  feedback-bot.cabal  flake.nix  mkdocs.yml  task.txt
app/: Main.hs
nix/: backend.nix  docs.nix  mkdocs.nix
src/: Bot.hs  Config.hs  Database.hs  Logging.hs  Server.hs  Subscriber.hs  TelegramClientEnv.hs
