cabal-version:      3.0
name:               FeedbackBot
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             DeniLark
maintainer:         denlarsites@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common general
  ghc-options:   -Wall
  build-depends:
    base ^>=4.17.2.1,
    telegram-bot-api,
    telegram-bot-simple,
    text,
    servant,
    servant-server,
    servant-client,
    warp,
    aeson,
    async,
    wai,
    wai-cors

library
    import:           general
    exposed-modules:  Bot, Database, Server
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010

executable FeedbackBot
    import:           general
    ghc-options:      -threaded -rtsopts
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: FeedbackBot
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite FeedbackBot-test
    import:           general
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends: FeedbackBot
